# pick-sticker

./: .gitignore  Bakefile.sh  Makefile  README.md  cfg.go  go.mod  go.sum  index_file  main.c  main.go  util.go
browser-c/: Makefile  main.c
browser-web/: package.json
collect/: .env.sample  main.py
downloader/: .env.sample  README.md  convert.sh  index.d.ts  index.js  jsconfig.json  package.json  pnpm-lock.yaml
folder-hack/: go.mod  go.sum  main.go
resizer/: main.py
tools/collect/: main.py  pyproject.toml
tools/downloader/: index.js  package.json
tools/resizer/: main.py  pyproject.toml
