[tool.poetry]
name = "resizer"
version = "0.1.0"
description = "Creates resized versions of all pictures"
authors = ["Edwin Kofler <edwin@kofler.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.0.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
